src/logs/error/2025-04-05.log
2025-04-05 18:28:20 error: uncaughtException: Identifier 'getAuthorization' has already been declared
C:\Users\alexa\CodeVStudio\backTesting\server\src\middlewares\mw.ts:15
const getAuthorization = (req) => {
      ^

SyntaxError: Identifier 'getAuthorization' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1281:20)
    at Module._compile (node:internal/modules/cjs/loader:1321:27)
    at Module.m._compile (C:\Users\alexa\CodeVStudio\backTesting\server\node_modules\ts-node\src\index.ts:1618:23)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)
    at Object.require.extensions.<computed> [as .ts] (C:\Users\alexa\CodeVStudio\backTesting\server\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1208:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1024:12)
    at Module.require (node:internal/modules/cjs/loader:1233:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (C:\Users\alexa\CodeVStudio\backTesting\server\src\routes\user.ts:8:1)
2025-04-05 18:41:54 error: uncaughtException: тип Unable to compile TypeScript:
[96msrc/middlewares/mw.ts[0m:[93m92[0m:[93m42[0m - [91merror[0m[90m TS1005: [0m',' expected.

[7m92[0m         ctx.res.setHeaders(['X-Signature': computedSignature(req)]);
[7m  [0m [91m                                         ~[0m

TSError: тип Unable to compile TypeScript:
[96msrc/middlewares/mw.ts[0m:[93m92[0m:[93m42[0m - [91merror[0m[90m TS1005: [0m',' expected.

[7m92[0m         ctx.res.setHeaders(['X-Signature': computedSignature(req)]);
[7m  [0m [91m                                         ~[0m

    at createTSError (C:\Users\alexa\CodeVStudio\backTesting\server\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\alexa\CodeVStudio\backTesting\server\node_modules\ts-node\src\index.ts:863:19)
    at C:\Users\alexa\CodeVStudio\backTesting\server\node_modules\ts-node\src\index.ts:1379:34
    at Object.compile (C:\Users\alexa\CodeVStudio\backTesting\server\node_modules\ts-node\src\index.ts:1458:13)
    at Module.m._compile (C:\Users\alexa\CodeVStudio\backTesting\server\node_modules\ts-node\src\index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)
    at Object.require.extensions.<computed> [as .ts] (C:\Users\alexa\CodeVStudio\backTesting\server\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1208:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1024:12)
    at Module.require (node:internal/modules/cjs/loader:1233:19)
